test/parser/compile_error/main_test_2.mj
program main_test
{
    int foo() { }
    void bar() { }
}